# ParametricLambda

./: .gitignore  .travis.yml  BigLambdaEagerReduction.hs  ParametricLambda.cabal  README.md  README2.md  haha.cabal  v0.hs  v1.hs
another/: Simple.agda  Simple.agdai  Simple.hs  SimpleCtx.hs
experiment/: DFT.hs
lambda/: README.md  v0.hs  v1.hs
lambda/Haha/: Term.hs
src/: Demo.hs  Eager.hs  Main.hs  main.hs
src/BrickUI/: MyBrick.hs  OldMyBrick.hs
src/ForDemo/: BigLambdaEagerReduction.hs
src/Haha/: MyBrick.hs  OldMyBrick.hs
src/Haha/Lambda/: TermSugar.hs  TermUtil.hs
src/Haha/Lambda/DeBujin/: Reduction.hs  Term.hs
src/Haha/Lambda/NamedVar/: BigLambdaEagerReduction.hs  InputSet.hs  Lambda.hs  NameSugar.hs  Num.hs  Redex.hs  Reduction.hs  Substitution.hs  Term.hs
src/Lambda/DeBujin/: TermSugar.hs
src/Lambda/Text/: InputSet.hs  NameSugar.hs  Num.hs  Reduction.hs  Substitution.hs  Term.hs  Universal.hs
