name:               ParametricLambda
version:            0.0.1
description:        Parametric Lambda Calculus
author:             Yun-Yan Chi
maintainer:    	    jaiyalas@gmail.com
License:            MIT
build-type:         Simple
cabal-version:      >= 1.12

Flag ui
    Description:     Build interactive ui
    Default:         False
--
Flag lib-only
    Description:     Build library only
    Default:         False

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    BrickUI.MyBrick
    Lambda.Text.Universal
  build-depends: base        >= 4 && < 5
               , brick       >= 0.2
               , lens        >= 4.13
               , vty         >= 5.3.1
               , containers  >= 0.5.6
  ghc-options:     -threaded -O2

executable demo
  if flag(lib-only)
    Buildable: False
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Demo.hs
  ghc-options:      -threaded -O2
  build-depends: base        >= 4 && < 5
               , containers  >= 0.5.6

executable ui
  if !flag(ui) || flag(lib-only)
    Buildable: False
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          ParametricLambda.hs
  ghc-options:      -threaded -O2
  build-depends: base        >= 4 && < 5
               , brick       >= 0.2
               , lens        >= 4.13
               , vty         >= 5.3.1
               , containers  >= 0.5.6
